--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -12,9 +12,9 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Use Node.js 14
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v4
         with:
-          node-version: '14'
+          node-version: 18
 
       - name: 🔨 Build Project
         run: |
