:sparkles: Add .htaccess for routes

--- a/angular.json
+++ b/angular.json
@@ -27,6 +27,7 @@
             "inlineStyleLanguage": "sass",
             "assets": [
               "src/favicon.ico",
+              "src/.htaccess",
               "src/assets"
             ],
             "styles": [
