--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@ngrx/effects": "^17.1.0",
     "@ngrx/store": "^16.3.0",
+    "@ngrx/store-devtools": "^17.1.0",
     "form-service-dynamic": "^16.2.1",
     "ngx-mask": "^17.0.4",
     "rxjs": "~7.8.0",
